add api product, fix api update order
